chore: minor UI fixes
remove obsolete Cargo.lock,
removed fancy borders,
unify fonts,
hide scrollbar,
fix issue with login button being too big

--- a/frontend/rust/yew/src/main.css
+++ b/frontend/rust/yew/src/main.css
@@ -22,6 +22,11 @@ html, body {
     font-family: 'Segoe UI', sans-serif;
 }
 
+textarea {
+    font-family: 'Segoe UI', sans-serif;
+    resize: none;
+}
+
 h1, h2, h3, h4, h5, h6 {
     color: var(--highlight);
 }
@@ -63,6 +68,7 @@ p {
     font-style: italic;
 }
 
-tr {
+tr, p, h1, h2, h3, h4, h5, h6{
+    text-align: justify;
     word-break: break-word;
 }
